--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>slimeworldmanager-nms-v1_14_R1</module>
         <module>slimeworldmanager-nms-v1_15_R1</module>
         <module>slimeworldmanager-nms-v1_16_R2</module>
+        <module>slimeworldmanager-nms-v1_16_R3</module>
     </modules>
 
     <repositories>
