--- a/slimeworldmanager-classmodifier/src/main/resources/list.yml
+++ b/slimeworldmanager-classmodifier/src/main/resources/list.yml
@@ -1,4 +1,18 @@
-# 1.16
+# 1.16.4
+net/minecraft/server/v1_16_R3/PlayerChunkMap:
+  - saveChunk(net.minecraft.server.v1_16_R3.IChunkAccess)@v1_16_R3/PlayerChunkMap_saveChunk.txt
+  - f(net.minecraft.server.v1_16_R3.ChunkCoordIntPair)@v1_16_R3/PlayerChunkMap_loadChunk.txt
+net/minecraft/server/v1_16_R3/MobSpawnerTrader:
+  - a(net.minecraft.server.v1_16_R3.WorldServer,boolean, boolean)@v1_16_R3/MobSpawnerTrader_tickRaids.txt
+net/minecraft/server/v1_16_R3/PersistentBase:
+  - a(java.io.File)@v1_16_R3/PersistentBase_saveData.txt
+net/minecraft/server/v1_16_R3/MinecraftServer:
+  - loadWorld(java.lang.String)@v1_16_R3/MinecraftServer_loadWorlds.txt
+  - getGamemode()@v1_16_R3/MinecraftServer_getGamemode.txt
+org/bukkit/craftbukkit/v1_16_R3/CraftServer:
+  - addWorld(org.bukkit.World)@v1_16_R3/CraftServer_addWorld.txt
+
+# 1.16.2 / 1.16.3
 net/minecraft/server/v1_16_R2/PlayerChunkMap:
   - saveChunk(net.minecraft.server.v1_16_R2.IChunkAccess)@v1_16_R2/PlayerChunkMap_saveChunk.txt
   - f(net.minecraft.server.v1_16_R2.ChunkCoordIntPair)@v1_16_R2/PlayerChunkMap_loadChunk.txt
