--- a/slimeworldmanager-nms-v1_16_R2/pom.xml
+++ b/slimeworldmanager-nms-v1_16_R2/pom.xml
@@ -29,8 +29,7 @@
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper</artifactId>
             <version>1.16.2-R0.1-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../paperjars/paper-1.16.2.jar</systemPath>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.grinderwolf</groupId>
